# Ariadne

./: .gitignore  Alignment.fasta  Insecta TPS.xlsx  README.md  README_EN.md  README_ZH.md  bacteria.fasta  code.sh  coralTPS (modified)-cembrene.fasta  environment.yml  install.sh  mkdocs.yml  plant.fasta  pyproject.toml  tps_alged.fasta  xx.fasta
AFLP_finder-main/: README.md  hmmsearch  hmmsearch_mac  run_AFLP_finder.sh  script.r  test.prot  test_run.sh  testd.fa  testd.fa.prot  training_data.txt
AFLP_finder-main/hmm/: 10.hmm  11.hmm  13.hmm  15.hmm  18.hmm  19.hmm  20.hmm  23.hmm  24.hmm  25.hmm  28.hmm  4.hmm  5.hmm  6.hmm  8.hmm
AFLP_finder-main/test_output/: data.txt  hmm_matrix  hmm_tab.txt  length  tsne-db36.csv  tsne-db36.id  tsne-db54.csv  tsne-db54.id
TPS/: TPS.xlsx
ariadne/: DupRemover.py  __init__.py  __main__.py  benchmark.py  classification.py  cli.py  data.py  demo.py  discovery.py  embed.py  esm_type.py  fasta_utils.py  filter.py  filter_contigs.py  filter_contigs_long.py  filter_coverage.py  filtering.py  log.py  model.py  motif.py  phylogeny.py  references.py  search.py  tree.py  utils.py  visualization.py  workflow.docx
docs/: citation.md  cli-reference.md  documentation-site.md  esm-type.md  faq.md  getting-started.md  index.md  method.md  outputs.md  tutorials.md
input/: all_tps.fasta
output/: outpu.fasta  pipeline_summary.tsv
protein/: tps.fasta
tmp_run_default_ceess/: pipeline_summary.tsv
tmp_run_no_benchmark_default/: pipeline_summary.tsv
tmp_run_simplified/: pipeline_summary.tsv
tree/: coral.fasta  fungi.fasta  insect.fasta
(+190 files in other folders)
