[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne-tps"
version = "0.1.0"
description = "Ariadne pipeline for animal terpene synthase discovery and cembrene-focused annotation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pyhmmer>=0.12.0",
  "pyrodigal>=3.7.0",
]

[project.scripts]
ariadne = "ariadne.cli:main"

[tool.setuptools]
packages = ["ariadne"]
