[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne-tps"
version = "0.1.0"
description = "Ariadne platform for coral TPS discovery, candidate CeeSs prioritization, and phylogeny."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pyhmmer>=0.12.0",
  "pyrodigal>=3.7.0",
  "scikit-learn>=1.4",
]

[project.scripts]
ariadne = "ariadne.cli:main"

[tool.setuptools]
packages = ["ariadne"]

[tool.setuptools.package-data]
ariadne = ["tps_hmm/*.hmm"]
